ingress/basic/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-services
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - example.localhost
    secretName: ingress-secret
  rules:
  - host: example.localhost
    http:
      paths:
      - path: /one(/|$)(.*)
        backend:
          serviceName: backend-service
          servicePort: 80
  - host: example.localhost
    http:
      paths:
      - path: /two(/|$)(.*)
        backend:
          serviceName: backend-service2
          servicePort: 80
